--- a/package.json
+++ b/package.json
@@ -6,31 +6,31 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-chart.js": "^1.0.3",
+    "angular-mocks": "^1.5.8",
+    "angular-translate": "^2.13.0",
     "angular-ui-router": "^0.3.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.11.1",
-    "browserify": "^13.0.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
+    "bootstrap": "^3.3.7",
+    "browser-sync": "^2.17.5",
+    "browserify": "^13.1.1",
     "browserify-ngannotate": "^2.0.0",
+    "chart.js": "^2.3.0",
+    "glob": "^7.1.1",
     "gulp": "^3.9.1",
-    "gulp-angular-templatecache": "^1.8.0",
+    "gulp-angular-templatecache": "^1.9.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
-    "marked": "^0.3.5",
-    "vinyl-source-stream": "^1.1.0",
-    "gulp-uglify": "^1.5.3",
+    "jquery": "^3.1.1",
+    "marked": "^0.3.6",
     "merge-stream": "^1.0.0",
-    "ngstorage": "0.3.10",
-    "ng-toast": "2.0.0",
-    "angular-animate": "1.5.7",
-    "jquery": "3.0.0",
-    "angular-translate": "2.11.0",
-    "bootstrap": "3.3.6",
-    "angular-chart.js": "1.0.0",
-    "chart.js": "2.1.6",
-    "glob": "7.0.5",
-    "angular-mocks": "1.5.8"
+    "ng-toast": "^2.0.0",
+    "ngstorage": "^0.3.11",
+    "vinyl-source-stream": "^1.1.0"
   },
   "directories": {
     "test": "tests"
