Now requires SASS for cleaner code.

--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
   "bugs": {
     "url": "https://github.com/NemProject/NanoWallet/issues"
   },
-  "homepage": "https://github.com/NemProject/NanoWallet#readme"
+  "homepage": "https://github.com/NemProject/NanoWallet#readme",
+  "devDependencies": {
+    "gulp-sass": "^2.3.2"
+  }
 }
